site/assets/css/flexi_shared.css
/* Buttons */
.button-add a {
	display: inline-block;
	padding: 1px 8px;
	border: 1px solid #ccc;
	background: #efefef;
}
.button-add a,
.button-add a:visited,
.button-add a:link,
.button-add a:hover {
	color: black;
	text-decoration: none;
}

/* Copy parameters */
.copyok {
	background: url(../images/accept.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
	margin: 5px 15px;
}
.copyfailed {
	background: url(../images/delete.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
	margin: 5px 15px;
}
.copywarn {
	background: url(../images/warning.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
	margin: 5px 15px;
}
.install-ok {
	background: url(../images/accept.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
}
.install-notok {
	background: url(../images/delete.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
}

/* Import screen */
#import-log {
	margin: 10px 10px 15px 10px;
	font-size: 12px;
	line-height: 140%;
	font-family: tahoma;
	white-space: normal;
}
.alert-modalbox {
	display: block;
	border-color: #D8000C !important;
	margin: 0 0 15px 0 !important;
	padding: 8px 10px 8px 36px !important;
	
	border: 1px solid !important;
	border-radius: 6px !important;
	border-color: #D8000C !important;
	
	background: #f0f0f0 url(../images/error.png) no-repeat 10px 50%;
  color: black !important;
}
.alert-modalbox-title {
	display: block;
	margin: 5px 0px;
	font-weight: bold;
}
.centerimg {
	display: block;
	text-align: center;
	margin-top: 20px;
	margin-bottom: 0px;
	padding: 0px;
	height: 30px;
}
.spinner {
	display: block;
	margin-top: 20px;
	margin-bottom: 0px;
	padding: 0px;
	height: 30px;
}
.lang-success {
	color: green;
	font-weight: bold;
}
.lang-fail {
	color: red;
	font-weight: bold;
}
#missing {
	display:none;
}
.button-close {
	text-align: center;
	margin: 20px 0px;
	padding: 0px;
}
ul.import-ok, ul.import-failed {
	list-style: none;
	margin: 5px 0 10px;
	padding: 0 0 0 10px;
}
ul.import-ok li {
	background: url(../images/accept.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
}
ul.import-failed li {
	background: url(../images/delete.png) 0% 50% no-repeat transparent;
	padding: 1px 0 1px 20px;
}

/** state toggler (backend specific CSS) **/
ul.statetoggler {
	float: none !important;
	margin: 0 !important;
}

/** rating bar **/
.qf_ratingbarcontainer {
	border: 1px solid #999999;
	height: 10px;
	width: 60px;
	margin: 2px 2px;
	display: block;
}
.qf_ratingbar {
	background-color: silver;
	height: 10px;
	display: block;
}

/**
 * Upload Widget CSS
 */
.upload-queue {
	list-style: none;
}

.upload-queue li {
	background: url(../images/upload.png) no-repeat 0 5px;
	padding: 5px 0 5px 22px;
}

.upload-queue .queue-file {
	font-weight: bold;
}

.upload-queue .queue-size {
	color: #aaa;
	margin-left: 1em;
	font-size: 0.9em;
}

.upload-queue .queue-loader {
	position: relative;
	margin: 3px 15px;
	font-size: 0.9em;
	background-color: #ddd;
	color: #fff;
	border: 1px inset #ddd;
}

.upload-queue .queue-subloader {
	text-align: center;
	position: absolute;
	background-color: #81B466;
	height: 100%;
	width: 0%;
	left: 0;
	top: 0;
}

.upload-queue .input-delete {
	width: 16px;
	height: 16px;
	background: url(../images/delete.png) no-repeat 0 0;
	text-decoration: none;
	border: none;
	float: right;
}

/* set the image to use and establish the lower-right position */ 
.cssbox, .cssbox_body, .cssbox_head, .cssbox_head h2{ 
	background: transparent url(../images/qfbox.png) no-repeat bottom right
	}
.cssbox{ 
	/* intended total box width - padding-right(next) */ 
	width:490px !important;
	/* IE Win = width - padding */ 
	width: 475px;
	/* the gap on the right edge of the image (not content padding) */ 
	padding-right:15px;
	/* use to position the box */ 
	margin: 20px
/*	float: left*/
}
/* set the top-right image */ 
.cssbox_head{
	background-position:top right;
	/* pull the right image over on top of border */ 
	margin-right:-15px;
	/* right-image-gap + right-inside padding */ 
	padding-right:40px
}

/* set the top-left image */ 
.cssbox_head h2{ 
	background-position:top left; 
	margin:0;
	/* reset main site styles*/ 
	border:0;
	/* ditto */ 
	/* padding-left = image gap + interior padding ... no padding-right */ 
	padding:25px 0 15px 15px;
	height:auto !important;
	height:1% 
}/* IE Holly Hack */ 

/* set the lower-left corner image */ 
.cssbox_body{ 
	background-position:bottom left; 
	margin-right:0px;/* interior-padding right */ 
	padding:15px 0 15px 15px
}
/* mirror .cssbox_head right/left */
/* Validation */
.invalid {
	color:#CC0000;
}
select.invalid,
input.invalid,
textarea.invalid {
/* 	border: 1px solid #CC0000; */
	border-style: dotted;
}
/* EOF Validation */
.calendar {
	vertical-align: middle;
}
/* */
.hasTip {
	cursor: help;
}
/**/
div.fieldgroups {
	float: left;
	margin-bottom: 10px;
}
fieldset.fieldgroups {
	margin: 0 20px 0 0;
	padding: 5px 10px;
}
fieldset.fieldgroups legend {
	color: #666;
	font-size: 11px;
	border: 1px solid #ccc;
	background-color: #f6F6F6;
	padding: 3px 6px 2px;
	margin: 0px 20px 0px 0px;
	}
fieldset.fieldgroups legend span img {
	vertical-align: middle;
	padding-left: 5px;
	}
/* image field */
.empty_image {
	display: block;
	background: #F9F9F9 url(../images/image_add.png) no-repeat 50% 50%;
	border:1px solid silver;
	margin-bottom:3px;
}
/* Versioning */
.versions-first {
	border-bottom: 1px dotted silver;
	padding: 4px;
}
.versions {
	border-bottom: 1px dotted silver;
	padding: 4px 0;
}
.versions img {
	vertical-align: middle;
}
table .active-version {
	background: #FFFFDD !important;
}
#pager {
	clear:both;
	float:left;
	overflow:hidden;
	width:100%;
	margin-bottom: 5px;
}
#result {
}
/* Credits */
div.credits {
	margin-top: 15px;
	text-align: center;
}
/* Filemanager */
.filemanager img { vertical-align: middle; }
.filemanager-tab { margin: 0px; padding:4px 0 0 0; border:0; }
#filemanager-zone fieldset.actions { margin: 0px; padding:0px; }
/* ... */

